--- a/webui/heartrepo/app.yaml
+++ b/webui/heartrepo/app.yaml
@@ -9,11 +9,11 @@ handlers:
   static_files: favicon.ico
   upload: favicon\.ico
 
+- url: /media
+  static_dir: ./media
+
 - url: .*
   script: main.app
-
-- url: /media
-  static_dir: media
 
 libraries:
 - name: webapp2
